--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "matplotlib>=3.10.8",
     "numba>=0.63.1",
     "numpy>=2.3.5",
+    "pytest>=9.0.2",
     "scipy>=1.17.0",
 ]
