--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,11 @@ dependencies = [
     "numpy>=2.3.5",
     "pytest>=9.0.2",
     "scipy>=1.17.0",
+    "tqdm>=4.67.2",
+]
+
+[dependency-groups]
+dev = [
+    "git-fame>=3.1.1",
+    "pytest>=9.0.2",
 ]
